--- a/deletion.html
+++ b/deletion.html
@@ -31,7 +31,7 @@
 
     <ol>
         <li>
-            <strong>Email Us:</strong> Send an email to <a href="coolabdulsamad09@gmail.com">coolabdulsamad09@gmail.com</a> with the subject "Purple_Food Data Deletion Request."
+            <strong>Email Us:</strong> Send an email to <a href="coolabdulsamad09@gmail.com">your_email@example.com</a> with the subject "Purple_Food Data Deletion Request."
         </li>
         <li>
             <strong>Provide Information:</strong> In your email, please include the following details:
