--- a/deletion.html
+++ b/deletion.html
@@ -53,7 +53,7 @@
         </li>
     </ol>
 
-    <p>If you have any questions or require further assistance, please contact us at <a href="mailto:your_email@example.com">your_email@example.com</a>.</p>
+    <p>If you have any questions or require further assistance, please contact us at <a href="coolabdulsamad09@gmail.com">your_email@example.com</a>.</p>
 
     <p><strong>Important:</strong> Please note that deleting your data may affect your ability to use certain features of the Purple_Food App.</p>
 
